syntax = "proto3";

package gateway;

import "service-user/proto/service-user.proto";
import "google/api/annotations.proto";

option go_package = "./proto/gateway";

service Gateway {
	rpc Ping(PingReq) returns (PingRes) {
		option (google.api.http) = {
			get: "/ping"
		};
	}
}

message PingReq {
	serviceuser.User user = 1;
}

message PingRes {
	serviceuser.User user = 1;
}
